cleanups pt2